--- a/client/src/Components/Jumbotron/style.css
+++ b/client/src/Components/Jumbotron/style.css
@@ -1,7 +1,7 @@
 .jumbotron{
     height: 300px;
     text-align:center;
-    background-image: url("https://vignette.wikia.nocookie.net/starwars/images/1/15/Library_Busts_AotC.png/revision/latest/scale-to-width-down/1000?cb=20180629185842");
+    background-image: url("https://modernstainlessladders.files.wordpress.com/2015/06/msl.jpg");
     margin: 10px auto;
     padding: 10px;
     color: white;
