--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+  margin: 100;
+  padding: 100;
+  font-family: "Times New Roman", Times, serif;
 }
